--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,1 +1,25 @@
-@use 'bootstrap'
+@use 'bootstrap';
+
+@use './partials/variables.scss' as *;
+
+body {
+    background-color: $darkBackground;
+}
+
+#projects:before {
+    display: block;
+    content: " ";
+    margin-top: -2.5rem;
+    height: 2.5rem;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+#contacts:before {
+    display: block;
+    content: " ";
+    margin-top: -2.5rem;
+    height: 2.5rem;
+    visibility: hidden;
+    pointer-events: none;
+}
