--- a/src/assets/scss/partials/variables.scss
+++ b/src/assets/scss/partials/variables.scss
@@ -2,7 +2,7 @@ $darkBackground: rgb(40, 50, 60);
 
 $navbarBackround: linear-gradient(135deg,
         rgb(40, 50, 60) 0%,
-        rgba(14, 14, 14, 0.25) 100%);
+        rgba(14, 14, 14) 100%);
 
 
 $navLinkHover: rgba(137, 137, 186, 1);
