Add disabled link color

--- a/src/assets/scss/partials/Navbar.scss
+++ b/src/assets/scss/partials/Navbar.scss
@@ -20,6 +20,10 @@
 
     }
 
+    .disabled {
+        color: gray!important;
+    }
+
     a:hover {
         background-color: $navLinkHover;
         transition: 0.5s ease;
