--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,15 @@ body {
     background-color: $darkBackground;
 }
 
+/* #about:before {
+    display: block;
+    content: " ";
+    margin-top: -2.5rem;
+    height: 2.5rem;
+    visibility: hidden;
+    pointer-events: none;
+} */
+
 #projects:before {
     display: block;
     content: " ";
