--- a/src/assets/scss/partials/ProjectsPagination.scss
+++ b/src/assets/scss/partials/ProjectsPagination.scss
@@ -5,6 +5,7 @@
     a {
         background: $navbarBackround !important;
         color: whitesmoke !important;
+        transition: 0.5s;
     }
 
 }
@@ -13,6 +14,7 @@ li.active {
 
     a {
         background: $navLinkHover !important;
+        transition: 0.5s;
     }
 
 }
@@ -22,6 +24,7 @@ li.disabled {
     a {
         background: $projectCardOverlay !important;
         color: gray !important;
+        transition: 0.5s;
     }
 
 }
