Add Technologies Dropdown filter

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -38,5 +38,9 @@ router-link:hover {
         }
     }
 
+}
 
+.btn {
+    background: $navbarBackround !important;
+    color: whitesmoke !important;
 }
