--- a/src/assets/scss/partials/variables.scss
+++ b/src/assets/scss/partials/variables.scss
@@ -4,9 +4,12 @@ $navbarBackround: linear-gradient(135deg,
         rgb(40, 50, 60) 0%,
         rgba(14, 14, 14) 100%);
 
+$hover: rgba(81, 105, 129, 1);
 
-$navLinkHover: rgba(137, 137, 186, 1);
+$hoverShadow: rgb(198 231 255);
 
 $projectCardOverlay: rgba(40, 52, 59, 0.7);
 
 // rgba(125, 126, 125, 1) 
+
+// $navLinkHover: rgba(137, 137, 186, 1);
