--- a/src/assets/scss/partials/About.scss
+++ b/src/assets/scss/partials/About.scss
@@ -1,6 +1,18 @@
 @use './variables.scss' as *;
 
-.projectCardLink:hover {
-    transition: 0.5s ease;
-    background: $navLinkHover !important;
+.projectCardLink {
+
+    background: $navbarBackround !important;
+    border: 1px solid black !important;
+
+    .latestThumb {
+        border: 1px solid rgba(0, 0, 0, 0.40) !important;
+    }
+
+    &:hover {
+        transition: 0.2s ease;
+        box-shadow: 0px 0px 5px 1px $hoverShadow !important;
+        ;
+    }
+
 }
