--- a/src/assets/scss/partials/ProjectsPagination.scss
+++ b/src/assets/scss/partials/ProjectsPagination.scss
@@ -2,6 +2,15 @@
 
 .page-item {
 
+    &:hover {
+        background-color: $hover;
+        box-shadow: 0px 0px 5px 1px $hoverShadow !important;
+        transition: 0.2s ease;
+        z-index: 1;
+    }
+
+    z-index: 0;
+
     a {
         background: $navbarBackround !important;
         color: whitesmoke !important;
@@ -13,7 +22,7 @@
 li.active {
 
     a {
-        background: $navLinkHover !important;
+        background: $hover !important;
         transition: 0.5s;
     }
 
@@ -26,5 +35,6 @@ li.disabled {
         color: gray !important;
         transition: 0.5s;
     }
+    
 
 }
